fix: hero block overflow-x

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -6,6 +6,8 @@
 .body {
     display: flex;
     flex-direction: column;
+    max-width: 100vw;
+    overflow-x: hidden;
     background: var(--color-background-primary);
     color: var(--color-text-primary);
     font-family: var(--text-font-family-primary);
